2006-04-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind C-h to "help"

	* primitives.lisp (*message-window-gravity*): new defvar
	(*input-window-gravity*): likewise

	* input.lisp (setup-input-window): dont set the drawable-y
	(draw-input-bucket): use setup-win-gravity

	* core.lisp (setup-win-gravity): new function
	(setup-message-window): use setup-win-gravity

	* user.lisp (*root-map*): bind C-N to "number"
	(display-keybinding): new function
	("help"): new command
	
	* primitives.lisp (*prefix-key*): remove defvar
	(*prefix-modifiers*): likewise
	(mapcar-hash): pass the fn both the key and value. callers updated.

	* core.lisp (init-screen): dont grab any keys on the root window
	(init-screen): list for :key-press events on the focus window
	(init-screen): don't grab any keys on the focus window

	* user.lisp (*root-map*): bind "t" to "meta t"
	(parse-and-run-command): parse keys
	(send-meta-key): take a key as argument
	("meta"): likewise
	(set-prefix-key): change the meta and other bindings

	* stumpwm.asd: require sb-posix for sbcl

	* core.lisp (ungrab-keys-on-window): specify :any for :modifiers
	(sync-keys): sync with the xserver after ungrabbing keys on a windows.
	(send-fake-key): accept a key structure as an argument

	* kmap.lisp (parse-char-name): Return the char-code of the
	name-char.

2006-04-07  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (set-prefix-key): new function

	* stumpwm.lisp (load-rc-file): use ~s to report the error. not ~a.
	(stumpwm): when the rc file fails to load, report the error
	instead of showing a welcome message.

	* package.lisp (:stumpwm): export some functions

	* kmap.lisp (lookup-command): new function
	(undefine-key): likewise

	* input.lisp (*input-map*): rename from *input-keymap*. callers updated.

	* core.lisp (:key-press): unmap the message window after reading
	the key sequence.
	(ungrab-keys-on-window): dont pass a value for :modifiers to ungrab-key